Java16 prep (#410)
* java 16 prep

* Fix Validator to compatible with JSR 223

And edit engine provider class

* back to java 16

* Resolve #409: consistent function call

* null testing is probably enough

* deprecate old potion effect

* use the actual library

* multiple changes

* reactivate actions

* make test to dependent on the environment

* missing import

* try if this work

* try if this work.2

* add options conditionally

* log failed tests

* use contains

too hard to keep track of the different error messages

* must use runtimeClasspath

* include lang3

* remove debug code

* activate gh action

* specify the subproject jar's dependency

* use current thread as context

* version change

* allow IO and thread creation from js

* not really needed

* meaning of context is different in Nashorn and GraalJS

Nashorn creates each context per execution, so those context are unique per each thread, yet GraalJS has only one context, and it shouldn't be accessed by multiple threads at the same time.

* do not re-use bindings

It may leak data to other threads

* No need to create new bindings

We get new engine every time, so bindings reset too

And execute all codes within the context

* manually clear all variables

each executor/placeholder has their own engine, yet individual executor/placeholder re-uses the engine until plugin reloads. Variable used in the previous execution may be leaked to the next execution.

* add more tests

and will add more soon

* more tests

* done with executors

* some placeholder tests

* debug message

* add softdepend

* change version